[package]
name = "web_mmb_server"
version = "0.1.0"
authors = ["Michal Malý"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "^0.13.0"
file-lock = "^1.1.20"
journald = "^0.7.0"
nix = "^0.19.0"
rocket = { version = "^0.5.0-rc.1", features = ["secrets"] }
regex = "1"
serde = "^1.0.125"
serde_derive = "^1.0.125"
serde_json = "^1.0.64"
time = { version = "0.2.27", features = ["std"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
