[package]
name = "web_mmb_server"
version = "0.1.0"
authors = ["Michal Malý"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "^0.13.0"
clap = "^2.34.0"
file-lock = "^1.1.20"
lazy_static = "^1.4.0"
journald = "^0.7.0"
nix = "^0.19.0"
rand = "^0.8.4"
regex = "1"
rocket = { version = "^0.5.0-rc.2", features = ["secrets"] }
serde = "^1.0.125"
serde_derive = "^1.0.125"
serde_json = "^1.0.64"
time = "^0.3.14"
uuid = { version = "0.8", features = ["serde", "v4"] }
